web splash change

--- a/web/index.html
+++ b/web/index.html
@@ -2,114 +2,92 @@
 <html>
 
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="description" content="Flutter Quiz App">
 
-  <!-- iOS meta tags & icons -->
+  <!-- Viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <!-- PWA / iOS -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="quiz_app">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="MyApp">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="QuizApp">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Manifest -->
+  <link rel="manifest" href="manifest.json">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>quiz_app</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Quiz App</title>
 
-
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-
-
-  <style id="splash-screen-style">
-    html {
-      height: 100%
-    }
-
+  <!-- SPLASH SCREEN STYLE -->
+  <style>
+    html,
     body {
       margin: 0;
-      min-height: 100%;
+      height: 100%;
       background-color: #ffffff;
-      background-size: 100% 100%;
     }
 
-    .center {
-      margin: 0;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
+    #splash {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #ffffff;
+      z-index: 9999;
     }
 
-    .contain {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
+    @media (prefers-color-scheme: dark) {
+      #splash {
+        background-color: #000000;
+      }
     }
 
-    .stretch {
-      display: block;
-      width: 100%;
-      height: 100%;
+    #splash img {
+      width: 140px;
+      height: 140px;
+      animation: pulse 1.5s infinite;
     }
 
-    .cover {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        opacity: 1;
+      }
 
-    .bottom {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      -ms-transform: translate(-50%, 0);
-      transform: translate(-50%, 0);
-    }
+      50% {
+        transform: scale(1.05);
+        opacity: 0.85;
+      }
 
-    .bottomLeft {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-    }
-
-    .bottomRight {
-      position: absolute;
-      bottom: 0;
-      right: 0;
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
     }
   </style>
-  <script id="splash-screen-script">
-    function removeSplashFromWeb() {
-      document.getElementById("splash")?.remove();
-      document.getElementById("splash-branding")?.remove();
+
+  <!-- REMOVE SPLASH WHEN FLUTTER READY -->
+  <script>
+    window.addEventListener('flutter-first-frame', function () {
+      const splash = document.getElementById('splash');
+      if (splash) splash.remove();
       document.body.style.background = "transparent";
-    }
+    });
   </script>
 </head>
 
 <body>
+
+  <!-- SPLASH SCREEN -->
   <picture id="splash">
     <source
       srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x"
@@ -117,12 +95,11 @@
     <source
       srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x"
       media="(prefers-color-scheme: dark)">
-    <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
+    <img src="splash/img/light-1x.png" alt="App Splash">
   </picture>
 
-
-  <script src="flutter_bootstrap.js" async=""></script>
-
+  <!-- FLUTTER -->
+  <script src="flutter_bootstrap.js" async></script>
 
 </body>
 
